--- a/website/source/assets/stylesheets/_docs.scss
+++ b/website/source/assets/stylesheets/_docs.scss
@@ -36,6 +36,7 @@ body.layout-postgresql,
 body.layout-powerdns,
 body.layout-rundeck,
 body.layout-statuscake,
+body.layout-softlayer,
 body.layout-template,
 body.layout-tls,
 body.layout-ultradns,
