Add the Linode provider
Currently it only supports Linode's linodes (servers), not any of
Linode's other resources.

--- a/website/source/layouts/docs.erb
+++ b/website/source/layouts/docs.erb
@@ -254,6 +254,10 @@
 					<a href="/docs/providers/librato/index.html">Librato</a>
 					</li>
 
+          <li<%= sidebar_current("docs-providers-linode") %>>
+          <a href="/docs/providers/linode/index.html">Linode</a>
+          </li>
+
 					<li<%= sidebar_current("docs-providers-mailgun") %>>
 					<a href="/docs/providers/mailgun/index.html">Mailgun</a>
 					</li>
