--- a/website/source/layouts/docs.erb
+++ b/website/source/layouts/docs.erb
@@ -215,6 +215,10 @@
 
 					<li<%= sidebar_current("docs-providers-influxdb") %>>
 					<a href="/docs/providers/influxdb/index.html">InfluxDB</a>
+                    </li>
+
+					<li<%= sidebar_current("docs-providers-librato") %>>
+					<a href="/docs/providers/librato/index.html">Librato</a>
 					</li>
 
 					<li<%= sidebar_current("docs-providers-mailgun") %>>
