Add SES resource

--- a/website/source/layouts/aws.erb
+++ b/website/source/layouts/aws.erb
@@ -704,6 +704,30 @@
                 </li>
 
 
+                <li<%= sidebar_current(/^docs-aws-resource-ses/) %>>
+                    <a href="#">SES Resources</a>
+                    <ul class="nav nav-visible">
+
+                        <li<%= sidebar_current("docs-aws-resource-ses-active-receipt-rule-set") %>>
+                            <a href="/docs/providers/aws/r/ses_active_receipt_rule_set.html">aws_ses_active_receipt_rule_set</a>
+                        </li>
+
+                        <li<%= sidebar_current("docs-aws-resource-ses-receipt-rule") %>>
+                            <a href="/docs/providers/aws/r/ses_receipt_rule.html">aws_ses_receipt_rule</a>
+                        </li>
+
+                        <li<%= sidebar_current("docs-aws-resource-ses-receipt-filter") %>>
+                            <a href="/docs/providers/aws/r/ses_receipt_filter.html">aws_ses_receipt_filter</a>
+                        </li>
+
+                        <li<%= sidebar_current("docs-aws-resource-ses-receipt-rule-set") %>>
+                            <a href="/docs/providers/aws/r/ses_receipt_rule_set.html">aws_ses_receipt_rule_set</a>
+                        </li>
+
+                    </ul>
+                </li>
+
+
                 <li<%= sidebar_current(/^docs-aws-resource-sns/) %>>
                     <a href="#">SNS Resources</a>
                     <ul class="nav nav-visible">
