--- a/website/source/layouts/aws.erb
+++ b/website/source/layouts/aws.erb
@@ -375,6 +375,10 @@
                             <a href="/docs/providers/aws/r/iam_group_policy.html">aws_iam_group_policy</a>
                         </li>
 
+                        <li<%= sidebar_current("docs-aws-resource-iam-group-policy-attachment") %>>
+                            <a href="/docs/providers/aws/r/iam_group_policy_attachment.html">aws_iam_group_policy_attachment</a>
+                        </li>
+
                         <li<%= sidebar_current("docs-aws-resource-iam-group-membership") %>>
                             <a href="/docs/providers/aws/r/iam_group_membership.html">aws_iam_group_membership</a>
                         </li>
@@ -398,6 +402,10 @@
                             <a href="/docs/providers/aws/r/iam_role_policy.html">aws_iam_role_policy</a>
                         </li>
 
+                        <li<%= sidebar_current("docs-aws-resource-iam-role-policy-attachment") %>>
+                            <a href="/docs/providers/aws/r/iam_role_policy_attachment.html">aws_iam_role_policy_attachment</a>
+                        </li>
+
                         <li<%= sidebar_current("docs-aws-resource-iam-saml-provider") %>>
                             <a href="/docs/providers/aws/r/iam_saml_provider.html">aws_iam_saml_provider</a>
                         </li>
@@ -412,6 +420,10 @@
 
                         <li<%= sidebar_current("docs-aws-resource-iam-user-policy") %>>
                             <a href="/docs/providers/aws/r/iam_user_policy.html">aws_iam_user_policy</a>
+                        </li>
+
+                        <li<%= sidebar_current("docs-aws-resource-iam-user-policy-attachment") %>>
+                            <a href="/docs/providers/aws/r/iam_user_policy_attachment.html">aws_iam_user_policy_attachment</a>
                         </li>
 
                         <li<%= sidebar_current("docs-aws-resource-iam-user-ssh-key") %>>
