provider/aws: Add support for api_gateway_authorizer

--- a/website/source/layouts/aws.erb
+++ b/website/source/layouts/aws.erb
@@ -16,6 +16,9 @@
                         <li<%= sidebar_current("docs-aws-resource-api-gateway-api-key") %>>
                             <a href="/docs/providers/aws/r/api_gateway_api_key.html">aws_api_gateway_api_key</a>
                         </li>
+                        <li<%= sidebar_current("docs-aws-resource-api-gateway-authorizer") %>>
+                            <a href="/docs/providers/aws/r/api_gateway_authorizer.html">aws_api_gateway_authorizer</a>
+                        </li>
                         <li<%= sidebar_current("docs-aws-resource-api-gateway-deployment") %>>
                             <a href="/docs/providers/aws/r/api_gateway_deployment.html">aws_api_gateway_deployment</a>
                         </li>
