--- a/website/source/layouts/commands-state.erb
+++ b/website/source/layouts/commands-state.erb
@@ -21,6 +21,10 @@
 							<a href="/docs/commands/state/list.html">list</a>
 						</li>
 
+						<li<%= sidebar_current("docs-state-sub-mv") %>>
+							<a href="/docs/commands/state/mv.html">mv</a>
+						</li>
+
 						<li<%= sidebar_current("docs-state-sub-rm") %>>
 							<a href="/docs/commands/state/rm.html">rm</a>
 						</li>
