--- a/website/source/assets/stylesheets/_docs.scss
+++ b/website/source/assets/stylesheets/_docs.scss
@@ -30,6 +30,7 @@ body.layout-mailgun,
 body.layout-mysql,
 body.layout-openstack,
 body.layout-packet,
+body.layout-pluginpatterns,
 body.layout-postgresql,
 body.layout-powerdns,
 body.layout-rundeck,
