documentation: ignition provider

--- a/website/source/layouts/docs.erb
+++ b/website/source/layouts/docs.erb
@@ -209,6 +209,10 @@
 					<a href="/docs/providers/heroku/index.html">Heroku</a>
 					</li>
 
+					<li<%= sidebar_current("docs-providers-ignition") %>>
+					<a href="/docs/providers/ignition/index.html">Ignition</a>
+					</li>
+
 					<li<%= sidebar_current("docs-providers-influxdb") %>>
 					<a href="/docs/providers/influxdb/index.html">InfluxDB</a>
 					</li>
