--- a/website/source/assets/stylesheets/_docs.scss
+++ b/website/source/assets/stylesheets/_docs.scss
@@ -25,6 +25,7 @@ body.layout-github,
 body.layout-fastly,
 body.layout-google,
 body.layout-heroku,
+body.layout-ignition,
 body.layout-influxdb,
 body.layout-mailgun,
 body.layout-mysql,
