--- a/website/source/layouts/aws.erb
+++ b/website/source/layouts/aws.erb
@@ -737,7 +737,7 @@
                         </li>
 
                         <li<%= sidebar_current("docs-aws-resource-vpc-peering") %>>
-                            <a href="/docs/providers/aws/r/vpc_peering.html">aws_vpc_peering</a>
+                            <a href="/docs/providers/aws/r/vpc_peering.html">aws_vpc_peering_connection</a>
                         </li>
 
                         <li<%= sidebar_current("docs-aws-resource-vpn-connection") %>>
