--- a/website/source/layouts/docs.erb
+++ b/website/source/layouts/docs.erb
@@ -347,6 +347,10 @@
 					<li<%= sidebar_current("docs-plugins-provider") %>>
 					<a href="/docs/plugins/provider.html">Provider</a>
 					</li>
+
+					<li<%= sidebar_current("docs-internals-plugins") %>>
+					<a href="/docs/internals/internal-plugins.html">Internals</a>
+					</li>
 				</ul>
 				</li>
 
@@ -367,6 +371,10 @@
 
 					<li<%= sidebar_current("docs-internals-resource-addressing") %>>
 					<a href="/docs/internals/resource-addressing.html">Resource Addressing</a>
+					</li>
+
+					<li<%= sidebar_current("docs-internals-plugins") %>>
+					<a href="/docs/internals/internal-plugins.html">Internal Plugins</a>
 					</li>
 				</ul>
 				</li>
