--- a/website/source/assets/stylesheets/_docs.scss
+++ b/website/source/assets/stylesheets/_docs.scss
@@ -14,6 +14,7 @@ body.layout-azurerm,
 body.layout-clc,
 body.layout-cloudflare,
 body.layout-cloudstack,
+body.layout-cobbler,
 body.layout-consul,
 body.layout-datadog,
 body.layout-digitalocean,
