--- a/website/source/layouts/docs.erb
+++ b/website/source/layouts/docs.erb
@@ -249,6 +249,10 @@
                     <a href="/docs/providers/powerdns/index.html">PowerDNS</a>
                     </li>
 
+					<li<%= sidebar_current("docs-providers-random") %>>
+					<a href="/docs/providers/random/index.html">Random</a>
+					</li>
+
 					<li<%= sidebar_current("docs-providers-rundeck") %>>
 					<a href="/docs/providers/rundeck/index.html">Rundeck</a>
 					</li>
