--- a/website/source/layouts/docs.erb
+++ b/website/source/layouts/docs.erb
@@ -83,6 +83,10 @@
 					<a href="/docs/commands/graph.html">graph</a>
 					</li>
 
+					<li<%= sidebar_current("docs-commands-import") %>>
+					<a href="/docs/commands/import.html">import</a>
+					</li>
+
 					<li<%= sidebar_current("docs-commands-init") %>>
 					<a href="/docs/commands/init.html">init</a>
 					</li>
