Implementing vpc_peering_connection_accept.

--- a/website/source/layouts/aws.erb
+++ b/website/source/layouts/aws.erb
@@ -786,6 +786,10 @@
                             <a href="/docs/providers/aws/r/vpc_peering.html">aws_vpc_peering_connection</a>
                         </li>
 
+                        <li<%= sidebar_current("docs-aws-resource-vpc-peering-accept") %>>
+                            <a href="/docs/providers/aws/r/vpc_peering_accept.html">aws_vpc_peering_connection_accept</a>
+                        </li>
+
                         <li<%= sidebar_current("docs-aws-resource-vpn-connection") %>>
                             <a href="/docs/providers/aws/r/vpn_connection.html">aws_vpn_connection</a>
                         </li>
