--- a/website/source/layouts/aws.erb
+++ b/website/source/layouts/aws.erb
@@ -19,6 +19,10 @@
                         <li<%= sidebar_current("docs-aws-datasource-availability-zones") %>>
                             <a href="/docs/providers/aws/d/availability_zones.html">aws_availability_zones</a>
                         </li>
+
+                        <li<%= sidebar_current("docs-aws-datasource-iam-policy-document") %>>
+                            <a href="/docs/providers/aws/d/iam_policy_document.html">aws_iam_policy_document</a>
+                        </li>
                     </ul>
                 </li>
 
@@ -402,6 +406,7 @@
                         <li<%= sidebar_current("docs-aws-resource-iam-policy") %>>
                             <a href="/docs/providers/aws/r/iam_policy.html">aws_iam_policy</a>
                         </li>
+
                         <li<%= sidebar_current("docs-aws-resource-iam-policy-attachment") %>>
                             <a href="/docs/providers/aws/r/iam_policy_attachment.html">aws_iam_policy_attachment</a>
                         </li>
