--- a/website/source/layouts/aws.erb
+++ b/website/source/layouts/aws.erb
@@ -19,9 +19,11 @@
                         <li<%= sidebar_current("docs-aws-datasource-availability-zones") %>>
                             <a href="/docs/providers/aws/d/availability_zones.html">aws_availability_zones</a>
                         </li>
-
                         <li<%= sidebar_current("docs-aws-datasource-iam-policy-document") %>>
                             <a href="/docs/providers/aws/d/iam_policy_document.html">aws_iam_policy_document</a>
+                        </li>
+                        <li<%= sidebar_current("docs-aws-datasource-s3-object") %>>
+                            <a href="/docs/providers/aws/d/s3_object.html">aws_s3_object</a>
                         </li>
                     </ul>
                 </li>
