doc: add ultradns_dirpool

--- a/website/source/layouts/ultradns.erb
+++ b/website/source/layouts/ultradns.erb
@@ -13,6 +13,9 @@
 				<li<%= sidebar_current(/^docs-ultradns-resource/) %>>
 				<a href="#">Resources</a>
 				<ul class="nav nav-visible">
+					<li<%= sidebar_current("docs-ultradns-resource-dirpool") %>>
+						<a href="/docs/providers/ultradns/r/dirpool.html">ultradns_dirpool</a>
+					</li>
 					<li<%= sidebar_current("docs-ultradns-resource-record") %>>
 						<a href="/docs/providers/ultradns/r/record.html">ultradns_record</a>
 					</li>
