--- a/website/source/layouts/aws.erb
+++ b/website/source/layouts/aws.erb
@@ -22,8 +22,8 @@
                         <li<%= sidebar_current("docs-aws-datasource-iam-policy-document") %>>
                             <a href="/docs/providers/aws/d/iam_policy_document.html">aws_iam_policy_document</a>
                         </li>
-                        <li<%= sidebar_current("docs-aws-datasource-s3-object") %>>
-                            <a href="/docs/providers/aws/d/s3_object.html">aws_s3_object</a>
+                        <li<%= sidebar_current("docs-aws-datasource-s3-bucket-object") %>>
+                            <a href="/docs/providers/aws/d/s3_bucket_object.html">aws_s3_bucket_object</a>
                         </li>
                     </ul>
                 </li>
