Add scaleway provider

--- a/website/source/layouts/docs.erb
+++ b/website/source/layouts/docs.erb
@@ -294,6 +294,10 @@
 					<a href="/docs/providers/softlayer/index.html">SoftLayer</a>
 					</li>
 
+          <li<%= sidebar_current("docs-providers-scaleway") %>>
+          <a href="/docs/providers/scaleway/index.html">Scaleway</a>
+          </li>
+
 					<li<%= sidebar_current("docs-providers-template") %>>
 					<a href="/docs/providers/template/index.html">Template</a>
 					</li>
