doc: cleanup typos in ultradns

--- a/website/source/layouts/ultradns.erb
+++ b/website/source/layouts/ultradns.erb
@@ -25,6 +25,9 @@
 					<li<%= sidebar_current("docs-ultradns-resource-record") %>>
 						<a href="/docs/providers/ultradns/r/record.html">ultradns_record</a>
 					</li>
+					<li<%= sidebar_current("docs-ultradns-resource-tcpool") %>>
+						<a href="/docs/providers/ultradns/r/tcpool.html">ultradns_tcpool</a>
+					</li>
 				</ul>
 				</li>
 			</ul>
