Add a cassandra provider that handles creating, updating, and destroying cassandra keyspaces. This commit also includes documentation for the new provider, acceptance tests, and vendors the necessary library github.com/gocql/gocql.

--- a/website/source/assets/stylesheets/_docs.scss
+++ b/website/source/assets/stylesheets/_docs.scss
@@ -29,6 +29,7 @@ body.layout-fastly,
 body.layout-google,
 body.layout-heroku,
 body.layout-influxdb,
+body.layout-cassandra,
 body.layout-librato,
 body.layout-mailgun,
 body.layout-mysql,
