--- a/website/source/layouts/docs.erb
+++ b/website/source/layouts/docs.erb
@@ -178,6 +178,10 @@
 					<a href="/docs/providers/azurerm/index.html">Azure (Resource Manager)</a>
 					</li>
 
+					<li<%= sidebar_current("docs-providers-cassandra") %>>
+                       <a href="/docs/providers/cassandra/index.html">Cassandra</a>
+                    </li>
+
 					<li<%= sidebar_current("docs-providers-chef") %>>
 					<a href="/docs/providers/chef/index.html">Chef</a>
 					</li>
