Add ddcloud provider documentation to index and tidy up example configuration.

--- a/website/source/layouts/docs.erb
+++ b/website/source/layouts/docs.erb
@@ -206,6 +206,10 @@
 						<a href="/docs/providers/datadog/index.html">Datadog</a>
 					</li>
 
+					<li<%= sidebar_current("docs-providers-ddcloud") %>>
+						<a href="/docs/providers/ddcloud/index.html">Dimension Data Managed Cloud Platform</a>
+					</li>
+
 					<li<%= sidebar_current("docs-providers-do") %>>
 					<a href="/docs/providers/do/index.html">DigitalOcean</a>
 					</li>
