--- a/website/source/assets/stylesheets/_docs.scss
+++ b/website/source/assets/stylesheets/_docs.scss
@@ -18,6 +18,7 @@ body.layout-cloudstack,
 body.layout-cobbler,
 body.layout-consul,
 body.layout-datadog,
+body.layout-ddcloud,
 body.layout-digitalocean,
 body.layout-dme,
 body.layout-dnsimple,
