Add documentation for ddcloud_firewall_rule and ddcloud_nat resource types.

--- a/website/source/layouts/ddcloud.erb
+++ b/website/source/layouts/ddcloud.erb
@@ -13,11 +13,17 @@
 				<li<%= sidebar_current(/^docs-ddcloud-resource/) %>>
 				<a href="#">Resources</a>
                 <ul class="nav nav-visible">
+					<li<%= sidebar_current("docs-ddcloud-resource-firewall_rule") %>>
+					<a href="/docs/providers/ddcloud/r/firewall_rule.html">ddcloud_firewall_rule</a>
+					</li>
+					<li<%= sidebar_current("docs-ddcloud-resource-server") %>>
+					<a href="/docs/providers/ddcloud/r/server.html">ddcloud_server</a>
+					</li>
                     <li<%= sidebar_current("docs-ddcloud-resource-networkdomain") %>>
 					<a href="/docs/providers/ddcloud/r/networkdomain.html">ddcloud_networkdomain</a>
 					</li>
-                    <li<%= sidebar_current("docs-ddcloud-resource-server") %>>
-					<a href="/docs/providers/ddcloud/r/server.html">ddcloud_server</a>
+					<li<%= sidebar_current("docs-ddcloud-nat") %>>
+					<a href="/docs/providers/ddcloud/r/nat.html">ddcloud_nat</a>
 					</li>
 					<li<%= sidebar_current("docs-ddcloud-vlan") %>>
 					<a href="/docs/providers/ddcloud/r/vlan.html">ddcloud_vlan</a>
