Rename nadc resources. Update website docs

--- a/website/source/layouts/softlayer.erb
+++ b/website/source/layouts/softlayer.erb
@@ -33,17 +33,17 @@
                     </ul>
                 </li>
 
-				<li<%= sidebar_current(/^docs-softlayer-resource-load-balancer/) %>>
+				<li<%= sidebar_current(/^docs-softlayer-resource-lb/) %>>
                     <a href="#">Load Balancer Resources</a>
                     <ul class="nav nav-visible">
-                        <li<%= sidebar_current("docs-softlayer-resource-load-balancer-nadc") %>>
-                            <a href="/docs/providers/softlayer/r/nadc.html">softlayer_network_application_delivery_controller</a>
+                        <li<%= sidebar_current("docs-softlayer-resource-lb-vpx") %>>
+                            <a href="/docs/providers/softlayer/r/lb_vpx.html">softlayer_lb_vpx</a>
                         </li>
-                        <li<%= sidebar_current("docs-softlayer-resource-load-balancer-virtual-ip-address") %>>
-                            <a href="/docs/providers/softlayer/r/virtual_ip_address.html">softlayer_loadbalancer_virtual_ip_address</a>
+                        <li<%= sidebar_current("docs-softlayer-resource-lb-vpx-vip") %>>
+                            <a href="/docs/providers/softlayer/r/lb_vpx_vip.html">softlayer_lb_vip</a>
                         </li>
-                        <li<%= sidebar_current("docs-softlayer-resource-load-balancer-service") %>>
-                            <a href="/docs/providers/softlayer/r/loadbalancer_service.html">softlayer_loadbalancer_service</a>
+                        <li<%= sidebar_current("docs-softlayer-resource-lb-vpx-service") %>>
+                            <a href="/docs/providers/softlayer/r/lb_vpx_service.html">softlayer_lb_service</a>
                         </li>
                     </ul>
                 </li>
