Improve influxdb provider
- reduce public funcs. We should not make things public that don't need to be public
- improve tests by verifying remote state
- add influxdb_user resource

    allows you to manage influxdb users:

    ```
    resource "influxdb_user" "admin" {
      name = "administrator"
      password = "super-secret"
      admin = true
    }
    ```

    and also database specific grants:

    ```
    resource "influxdb_user" "ro" {
      name = "read-only"
      password = "read-only"

      grant {
        database = "a"
        privilege = "read"
      }
    }
    ```

--- a/website/source/layouts/influxdb.erb
+++ b/website/source/layouts/influxdb.erb
@@ -14,7 +14,10 @@
 					<a href="#">Resources</a>
 					<ul class="nav nav-visible">
 						<li<%= sidebar_current("docs-influxdb-resource-database") %>>
-							<a href="/docs/providers/influxdb/r/database.html">influxdb_database</a>
+              <a href="/docs/providers/influxdb/r/database.html">influxdb_database</a>
+            </li>
+            <li<%= sidebar_current("docs-influxdb-resource-user") %>>
+							<a href="/docs/providers/influxdb/r/user.html">influxdb_user</a>
 						</li>
 					</ul>
 				</li>
