--- a/website/source/layouts/influxdb.erb
+++ b/website/source/layouts/influxdb.erb
@@ -17,7 +17,10 @@
               <a href="/docs/providers/influxdb/r/database.html">influxdb_database</a>
             </li>
             <li<%= sidebar_current("docs-influxdb-resource-user") %>>
-							<a href="/docs/providers/influxdb/r/user.html">influxdb_user</a>
+              <a href="/docs/providers/influxdb/r/user.html">influxdb_user</a>
+            </li>
+            <li<%= sidebar_current("docs-influxdb-resource-continuous_query") %>>
+							<a href="/docs/providers/influxdb/r/continuous_query.html">influxdb_continuous_query</a>
 						</li>
 					</ul>
 				</li>
