--- a/website/source/assets/stylesheets/_docs.scss
+++ b/website/source/assets/stylesheets/_docs.scss
@@ -30,6 +30,7 @@ body.layout-google,
 body.layout-heroku,
 body.layout-influxdb,
 body.layout-librato,
+body.layout-logentries,
 body.layout-mailgun,
 body.layout-mysql,
 body.layout-openstack,
