SimpleDB domain resource

--- a/website/source/layouts/aws.erb
+++ b/website/source/layouts/aws.erb
@@ -728,6 +728,18 @@
                 </li>
 
 
+                <li<%= sidebar_current(/^docs-aws-resource-simpledb/) %>>
+                    <a href="#">SimpleDB Resources</a>
+                    <ul class="nav nav-visible">
+
+                        <li<%= sidebar_current("docs-aws-resource-simpledb-domain") %>>
+                            <a href="/docs/providers/aws/r/simpledb_domain.html">aws_simpledb_domain</a>
+                        </li>
+
+                    </ul>
+                </li>
+
+
                 <li<%= sidebar_current(/^docs-aws-resource-sns/) %>>
                     <a href="#">SNS Resources</a>
                     <ul class="nav nav-visible">
