--- a/website/source/layouts/aws.erb
+++ b/website/source/layouts/aws.erb
@@ -233,7 +233,7 @@
                         </li>
 
                         <li<%= sidebar_current("docs-aws-resource-elb-attachment") %>>
-                            <a href="/docs/providers/aws/r/elb_attachment.html">aws_elb</a>
+                            <a href="/docs/providers/aws/r/elb_attachment.html">aws_elb_attachment</a>
                         </li>
 
                         <li<%= sidebar_current("docs-aws-resource-instance") %>>
