provider/scaleway introduce default sec group ds

--- a/website/source/layouts/scaleway.erb
+++ b/website/source/layouts/scaleway.erb
@@ -10,6 +10,15 @@
           <a href="/docs/providers/scaleway/index.html">Scaleway Provider</a>
         </li>
 
+        <li<%= sidebar_current(/^docs-scaleway-datasource/) %>>
+          <a href="#">Data Sources</a>
+          <ul class="nav nav-visible">
+            <li<%= sidebar_current("docs-scaleway-datasource-default_security_group") %>>
+                <a href="/docs/providers/scaleway/d/default_security_group.html">default_security_group</a>
+            </li>
+          </ul>
+        </li>
+
         <li<%= sidebar_current(/^docs-scaleway-resource/) %>>
           <a href="#">Resources</a>
           <ul class="nav nav-visible">
