--- a/website/source/assets/stylesheets/_docs.scss
+++ b/website/source/assets/stylesheets/_docs.scss
@@ -39,6 +39,7 @@ body.layout-postgresql,
 body.layout-powerdns,
 body.layout-random,
 body.layout-rundeck,
+body.layout-scaleway,
 body.layout-statuscake,
 body.layout-softlayer,
 body.layout-template,
