lang/funcs: add direxists function

--- a/website/layouts/language.erb
+++ b/website/layouts/language.erb
@@ -657,6 +657,10 @@
               </li>
 
               <li>
+                <a href="/docs/language/functions/direxists.html">direxists</a>
+              </li>
+
+              <li>
                 <a href="/docs/language/functions/fileset.html">fileset</a>
               </li>
 
