--- a/website/layouts/language.erb
+++ b/website/layouts/language.erb
@@ -951,28 +951,15 @@
           </li>
 
           <li>
+            <a href="/docs/language/state/workspaces.html">Workspaces</a>
+          </li>
+
+          <li>
             <a href="/docs/language/state/remote.html">Remote State</a>
           </li>
 
           <li>
             <a href="/docs/language/state/sensitive-data.html">Sensitive Data</a>
-          </li>
-        </ul>
-      </li>
-
-      <li>
-        <a href="#">Workspaces</a>
-        <ul class="nav">
-          <li>
-            <a href="/docs/language/workspaces/index.html">Overview</a>
-          </li>
-
-          <li>
-            <a href="/docs/language/workspaces/via-backends.html">Workspaces via Terraform state backends</a>
-          </li>
-
-          <li>
-            <a href="/docs/language/workspaces/via-terraform-cloud.html">Workspaces via Terraform Cloud</a>
           </li>
         </ul>
       </li>
