--- a/website/layouts/docs.erb
+++ b/website/layouts/docs.erb
@@ -335,19 +335,22 @@
       </li>
 
       <li>
-        <a href="#">Configuring Terraform Cloud</a>
+        <a href="#">Using Terraform Cloud</a>
         <ul class="nav">
           <li>
-            <a href="/docs/cli/configuring-terraform-cloud/index.html">Overview</a>
+            <a href="/docs/cli/cloud/index.html">Overview</a>
           </li>
+
           <li>
-            <a href="/docs/cli/configuring-terraform-cloud/initialization.html">Initialization with the <code>cloud</code> settings block</a>
+            <a href="/docs/cli/cloud/settings.html">Terraform Cloud Settings</a>
           </li>
+
           <li>
-            <a href="/docs/cli/configuring-terraform-cloud/command-line-arguments.html">Command Line Arguments</a>
+            <a href="/docs/cli/cloud/migrating.html">Initializing and Migrating</a>
           </li>
+
           <li>
-            <a href="/docs/cli/configuring-terraform-cloud/migrating-from-the-remote-backend.html">Migrating from the remote backend</a>
+            <a href="/docs/cli/cloud/command-line-arguments.html">Command Line Arguments</a>
           </li>
         </ul>
       </li>
@@ -583,7 +586,7 @@
           <li>
             <a href="/docs/internals/remote-service-discovery.html">Remote Service Discovery</a>
           </li>
-          
+
           <li>
             <a href="/docs/internals/graph.html">Resource Graph</a>
           </li>
