--- a/website/layouts/language.erb
+++ b/website/layouts/language.erb
@@ -365,7 +365,9 @@
           <li>
             <a href="#">String Functions</a>
             <ul class="nav">
-
+              <li>
+                <a href="/docs/language/functions/parseurl.html">parseurl</a>
+              </li>
               <li>
                 <a href="/docs/language/functions/chomp.html">chomp</a>
               </li>
